--- a/clientservice/views/index.ejs
+++ b/clientservice/views/index.ejs
@@ -27,6 +27,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" defer></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" defer></script>
    
+  <script src="./classes/Fetch.js" defer></script>
   <script src="./classes/HttpRequest.js" defer></script>  
   <script src="./classes/Form.js"defer></script>
     <script src="./classes/Utils.js" defer></script>
